# ag-devops

./: .env.backup  .gitignore  activate_clean_env.sh  automation-report.md  commands and terminal to start the automation.txt  conda_wrapper.sh  curl_commands.txt.txt  debug_segfault.sh  deployment_agents.py  enhanced_app_css.css  enhanced_server.py  fix_devops_issues.sh  fix_todo_compilation.sh  full_pipeline_testing.md  jira-simulator.sh  jira_config_template.sh  jira_trigger_bash.sh  jira_webhook_setup_guide.md  jira_webhook_trigger.py  package-lock.json  pyproject.toml  requirements.txt  server_monitor.sh  setup-conda.sh  setup-simple.sh  setup-windows.sh  setup.sh  setup_todo_app.sh  start-all.sh  test-system.sh
generated_code/: App.css  App.jsx  components_CategoryComponent.jsx  components_ComponentName.jsx  components_ExportButton.jsx  reports_EXPORT-001.md  reports_NGROK-001.md  reports_TES-85.md
scripts/: run_tests.py  setup.py
src/: App.jsx  config.py  main.py  main.py-backup-in-video  main.py.backup  main_3.py  main_Updates_code_fromJiraTicket.py  main_manual_working.py  main_working-with_CURL.py  server.py  server_backup1.py  server_backup_3.py  server_working_backup_2.py
src/agents/: enhanced_code_generator.py
src/components/: ComponentName.jsx  ConfirmationDialog.jsx  ExportToCSV.jsx  SearchBar.jsx
src/database/: simple_persistence.py
src/monitoring/: simple_dashboard.py
src/utils/: logger.py
tests/: integration_webhooks.http  test_basic.py
todo-app/backend/: package-lock.json  package.json  server.js  todos.db
(+97 files in other folders)
