[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-devops-autocoder"
version = "1.0.0"
description = "LangGraph Multi-Agent DevOps Automation System"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "langgraph>=0.0.40",
    "langchain>=0.1.0",
    "httpx>=0.25.0",
    "GitPython>=3.1.40",
    "jira>=3.5.0",
    "pytest>=7.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py39']